{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 839,
  "lineage": "7fa7d04a-a554-7080-82f0-b4681e677357",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea1efacb4e759335",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0232567b4f9a81995",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0232567b4f9a81995",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "victor-eng54",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ea1f4fbc236e4db",
            "private_dns": "ip-10-0-2-224.eu-west-1.compute.internal",
            "private_ip": "10.0.2.224",
            "public_ip": "52.19.110.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-004eb9354dc63c888",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030e9cde9d9c37bc2",
            "tags": {
              "Name": "Victor_Eng54_App-DB"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cec23706d5e29c2"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_security_group.db_SG",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05470a776d3d24642",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-ig"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/Victor-Eng54-lb-tf/d8e4fb569b989833",
            "arn_suffix": "net/Victor-Eng54-lb-tf/d8e4fb569b989833",
            "dns_name": "Victor-Eng54-lb-tf-d8e4fb569b989833.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/Victor-Eng54-lb-tf/d8e4fb569b989833",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Victor-Eng54-lb-tf",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e23074f28b11a858"
              }
            ],
            "subnets": [
              "subnet-0e23074f28b11a858"
            ],
            "tags": {
              "Environment": "Victor_Eng54_App-production",
              "Name": "Victor_Eng54_App-lb-tf"
            },
            "vpc_id": "vpc-003efe9d4aba27879",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app_asg.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_litsener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/net/Victor-Eng54-lb-tf/d8e4fb569b989833/cfdfe0de0b6ef95a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Victor-Eng54-LBTG/e334d8d7f6e0feb4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/net/Victor-Eng54-lb-tf/d8e4fb569b989833/cfdfe0de0b6ef95a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/Victor-Eng54-lb-tf/d8e4fb569b989833",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app_asg.aws_lb.app_lb",
            "module.app_asg.aws_lb_target_group.LB_TargetGroup",
            "module.app_asg.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "LB_TargetGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Victor-Eng54-LBTG/e334d8d7f6e0feb4",
            "arn_suffix": "targetgroup/Victor-Eng54-LBTG/e334d8d7f6e0feb4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Victor-Eng54-LBTG/e334d8d7f6e0feb4",
            "lambda_multi_value_headers_enabled": false,
            "name": "Victor-Eng54-LBTG",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db_private_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 27017
              }
            ],
            "id": "acl-0b84a453d8cb187e4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-030e9cde9d9c37bc2"
            ],
            "tags": {
              "Name": "Victor_Eng54_App-private-NACL"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-002498bb0f676e235",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 150,
                "to_port": 27017
              },
              {
                "action": "allow",
                "cidr_block": "85.255.236.170/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 140,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0e23074f28b11a858"
            ],
            "tags": {
              "Name": "Victor_Eng54_App-public-NACL"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app_asg.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ec5b95cdaeb71e8a",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Victor_Eng54_App-private-route_table"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-077de5ef0b7172740",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05470a776d3d24642",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-Table-Victor_Eng54_App-public"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032bbcc1c1726b893",
            "route_table_id": "rtb-0ec5b95cdaeb71e8a",
            "subnet_id": "subnet-030e9cde9d9c37bc2"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_route_table.private",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077a60717da76bd9b",
            "route_table_id": "rtb-077de5ef0b7172740",
            "subnet_id": "subnet-0e23074f28b11a858"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc",
            "module.app_asg.aws_route_table.public",
            "module.app_asg.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "App_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0a1e7883b4c3a3e52",
            "description": "Allows for traffic on Port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1e7883b4c3a3e52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 3000 from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "85.255.236.170/32"
                ],
                "description": "Port 22 from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Victor-Eng54_App-SG",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Victor_Eng54_App-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05cec23706d5e29c2",
            "description": "Private securiy Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cec23706d5e29c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Port 22 from public subnet",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Port 27107 from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Port 27107 from public subnet",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "DB Security Group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Victor_Eng54_App-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_asg",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e23074f28b11a858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e23074f28b11a858",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-subnet"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-030e9cde9d9c37bc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-030e9cde9d9c37bc2",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-private-subnet"
            },
            "vpc_id": "vpc-003efe9d4aba27879"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-003efe9d4aba27879",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0146bcfd995e5cf0a",
            "default_route_table_id": "rtb-01bf661fa7d7db301",
            "default_security_group_id": "sg-0dedf2d0bd0c6e532",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-003efe9d4aba27879",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01bf661fa7d7db301",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Victor_Eng54_App-VPC"
            }
          }
        }
      ]
    }
  ]
}